--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Bem-vindo ao Projeto Aula</h1>
-    <p>Este é o início do seu documento HTML.</p>
+    <p>Este é o início do seu documento HTML...</p>
 </body>
 </html>
